# LinkUp

./: .env.example  a.py  database.db  pyproject.toml  run_backend.py  run_bot.py  run_server.py
bot/: __init__.py  main.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/routers/: __init__.py  check_new_order_master.py  create_order.py  create_service.py  master.py  master_register.py  masters_catalog.py  order_master.py  select_action_order.py  services_actions_for_master.py  user.py  user_regster.py
bot/states/: __init__.py  master.py  order.py  service.py  user.py
bot/utils/: __init__.py  check_user_exists.py  format_order.py  requests_wrapper.py  validate_date.py
bot/utils/decorators/: __init__.py  master_required.py
server/: main.py
server/db/: __init__.py
server/db/models/: __init__.py  master.py  order.py  refferal_link.py  services.py  user.py
server/routers/: __init__.py  master.py  order.py  referral_link.py  service.py  test.py  users.py
server/shemas/: __init__.py  master.py  order.py  refferal_link.py  service.py  user.py
server/utils/: __init__.py  check_exists.py  check_exists_with_excexption.py  get_master.py  get_orders_by_filter.py  get_service.py  get_services_by_tg_id.py
tests/: conftest.py
tests/e2e/: __init__.py  test_master_errors.py  test_master_success.py  test_order_errors.py  test_order_success.py  test_ref_errors.py  test_ref_success.py  test_service_errors.py  test_service_success.py  test_user_errors.py  test_user_success.py
